--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,5 @@
 #root {
-  max-width: 1280px;
+  max-width: 1440px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -39,4 +39,27 @@
 
 .read-the-docs {
   color: #888;
+}
+
+img {
+  aspect-ratio: 2/1;
+  max-width: 300px;
+
+  object-fit: cover;
+}
+
+.card-container {
+  background-color: #3f3f3f;
+  border-radius: 12px;
+  margin-block: 0.5rem;
+}
+
+.card-container > * {
+  padding-block: 0.25rem;
+}
+
+ul {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
 }
