ui: making theme and basic navBar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,33 +1,146 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  --background: oklch(0.98 0.01 81.76);
+  --foreground: oklch(0.38 0.02 64.16);
+  --card: oklch(0.98 0.01 67.7);
+  --card-foreground: oklch(0.38 0.02 64.16);
+  --popover: oklch(0.96 0.04 83.12);
+  --popover-foreground: oklch(0.38 0.02 64.16);
+  --primary: oklch(0.7 0.17 28.12);
+  --primary-foreground: oklch(1 0 0);
+  --secondary: oklch(0.81 0.15 71.81);
+  --secondary-foreground: oklch(0.38 0.02 64.16);
+  --muted: oklch(0.94 0.03 62.32);
+  --muted-foreground: oklch(0.56 0.05 58.74);
+  --accent: oklch(0.93 0.04 83.2);
+  --accent-foreground: oklch(0.47 0.05 58.08);
+  --destructive: oklch(0.57 0.2 26.34);
+  --border: oklch(0.9 0.06 66.11);
+  --input: oklch(0.9 0.06 66.11);
+  --ring: oklch(0.7 0.17 28.12);
+  --chart-1: oklch(0.7 0.17 28.12);
+  --chart-2: oklch(0.81 0.15 71.81);
+  --chart-3: oklch(0.71 0.18 37.63);
+  --chart-4: oklch(0.89 0.15 91.66);
+  --chart-5: oklch(0.59 0.19 36.05);
+  --sidebar: oklch(0.97 0.02 72.57);
+  --sidebar-foreground: oklch(0.38 0.02 64.16);
+  --sidebar-primary: oklch(0.7 0.17 28.12);
+  --sidebar-primary-foreground: oklch(1 0 0);
+  --sidebar-accent: oklch(0.81 0.15 71.81);
+  --sidebar-accent-foreground: oklch(0.38 0.02 64.16);
+  --sidebar-border: oklch(0.87 0.08 65.83);
+  --sidebar-ring: oklch(0.7 0.17 28.12);
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  --font-sans: Nunito, Segoe UI, Tahoma, Geneva, Verdana, sans-serif;
+  --font-serif: Lora, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
+  --font-mono: Fira Code, ui-monospace, SFMono-Regular;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --font-s: 0.75rem;
+  --font-m: 1rem;
+  --font-l: 1.25rem;
+  --font-xl: 1.5rem;
+  --font-xxl: 2rem;
+
+  --radius: 0.6rem;
+
+  --shadow-2xs: 0px 1px 3px 0px oklch(0.7 0.17 28.12 / 0.03);
+  --shadow-xs: 0px 1px 3px 0px oklch(0.7 0.17 28.12 / 0.03);
+  --shadow-sm:
+    0px 1px 3px 0px oklch(0.7 0.17 28.12 / 0.05),
+    0px 1px 2px -1px oklch(0.7 0.17 28.12 / 0.05);
+  --shadow:
+    0px 1px 3px 0px oklch(0.7 0.17 28.12 / 0.05),
+    0px 1px 2px -1px oklch(0.7 0.17 28.12 / 0.05);
+  --shadow-md:
+    0px 1px 3px 0px oklch(0.7 0.17 28.12 / 0.05),
+    0px 2px 4px -1px oklch(0.7 0.17 28.12 / 0.05);
+  --shadow-lg:
+    0px 1px 3px 0px oklch(0.7 0.17 28.12 / 0.05),
+    0px 4px 6px -1px oklch(0.7 0.17 28.12 / 0.05);
+  --shadow-xl:
+    0px 1px 3px 0px oklch(0.7 0.17 28.12 / 0.05),
+    0px 8px 10px -1px oklch(0.7 0.17 28.12 / 0.05);
+  --shadow-2xl: 0px 1px 3px 0px oklch(0.7 0.17 28.12 / 0.13);
+
+  /*spacing*/
+
+  --padding-sizing-m: 1rem;
+}
+
+.dark {
+  --background: oklch(0.26 0.02 63.41);
+  --foreground: oklch(0.87 0.08 65.83);
+  --card: oklch(0.31 0.03 60.03);
+  --card-foreground: oklch(0.87 0.08 65.83);
+  --popover: oklch(0.36 0.03 54.43);
+  --popover-foreground: oklch(0.87 0.08 65.83);
+  --primary: oklch(0.7 0.17 28.12);
+  --primary-foreground: oklch(1 0 0);
+  --secondary: oklch(0.81 0.15 71.81);
+  --secondary-foreground: oklch(0.26 0.02 63.41);
+  --muted: oklch(0.38 0.03 60.76);
+  --muted-foreground: oklch(0.79 0.06 71.87);
+  --accent: oklch(0.45 0.03 54.7);
+  --accent-foreground: oklch(0.97 0.03 82.9);
+  --destructive: oklch(0.5 0.19 27.43);
+  --border: oklch(0.42 0.03 58.74);
+  --input: oklch(0.4 0.04 60.31);
+  --ring: oklch(0.7 0.17 28.12);
+  --chart-1: oklch(0.7 0.17 28.12);
+  --chart-2: oklch(0.81 0.15 71.81);
+  --chart-3: oklch(0.71 0.18 37.63);
+  --chart-4: oklch(0.89 0.15 91.66);
+  --chart-5: oklch(0.59 0.19 36.05);
+  --sidebar: oklch(0.31 0.03 60.03);
+  --sidebar-foreground: oklch(0.87 0.08 65.83);
+  --sidebar-primary: oklch(0.7 0.17 28.12);
+  --sidebar-primary-foreground: oklch(1 0 0);
+  --sidebar-accent: oklch(0.81 0.15 71.81);
+  --sidebar-accent-foreground: oklch(0.26 0.02 63.41);
+  --sidebar-border: oklch(0.45 0.05 60.24);
+  --sidebar-ring: oklch(0.7 0.17 28.12);
+
+  --shadow-2xs: 0px 1px 3px 0px oklch(0.7 0.17 28.12 / 0.03);
+  --shadow-xs: 0px 1px 3px 0px oklch(0.7 0.17 28.12 / 0.03);
+  --shadow-sm:
+    0px 1px 3px 0px oklch(0.7 0.17 28.12 / 0.05),
+    0px 1px 2px -1px oklch(0.7 0.17 28.12 / 0.05);
+  --shadow:
+    0px 1px 3px 0px oklch(0.7 0.17 28.12 / 0.05),
+    0px 1px 2px -1px oklch(0.7 0.17 28.12 / 0.05);
+  --shadow-md:
+    0px 1px 3px 0px oklch(0.7 0.17 28.12 / 0.05),
+    0px 2px 4px -1px oklch(0.7 0.17 28.12 / 0.05);
+  --shadow-lg:
+    0px 1px 3px 0px oklch(0.7 0.17 28.12 / 0.05),
+    0px 4px 6px -1px oklch(0.7 0.17 28.12 / 0.05);
+  --shadow-xl:
+    0px 1px 3px 0px oklch(0.7 0.17 28.12 / 0.05),
+    0px 8px 10px -1px oklch(0.7 0.17 28.12 / 0.05);
+  --shadow-2xl: 0px 1px 3px 0px oklch(0.7 0.17 28.12 / 0.13);
+}
+
+/*/////////////////////////////////////////////////////////*/
+
+* {
+  margin: 0;
+  padding: 0;
 }
 
 a {
   font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+  text-decoration: none;
 }
 
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  font-size: 16px;
+  font-family: var(--font-sans);
+  background-color: var(--background);
+  color: var(--foreground);
 }
 
 ul li {
