--- a/frontend/src/styles/Login.module.css
+++ b/frontend/src/styles/Login.module.css
@@ -1,3 +1,7 @@
+h2 {
+  padding-block: 1rem;
+}
+
 .login-page {
   display: flex;
   flex-direction: column;
@@ -8,6 +12,8 @@ form {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  justify-content: center;
+  align-items: center;
 }
 
 form input {
