--- a/backend/core/templates/core/base.html
+++ b/backend/core/templates/core/base.html
@@ -16,14 +16,15 @@
 
             <div class="space-x-6">
                 <a href="{% url 'item:new' %}" class="text-lg font-semibold hover:text-gray-500">New item</a>
-                <a href="#" class="text-lg font-semibold hover:text-gray-500">Browse</a>
+                <a href="{% url 'item:items' %}" class="text-lg font-semibold hover:text-gray-500">Browse</a>
+
                 {% if request.user.is_authenticated %}
-                    <a href="#" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Inbox</a>
+                    <a href="{% url 'conversation:inbox' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Inbox</a>
                     <a href="{% url 'dashboard:index' %}" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-gray-700">Dashboard</a>
-                {%else%}
+                {% else %}
                     <a href="{% url 'core:signup' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Sign up</a>
                     <a href="{% url 'core:login' %}" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-gray-700">Log in</a>
-                {%endif%}
+                {% endif %}
             </div>
         </nav>
 
@@ -36,7 +37,7 @@
             <div class="w-2/3 pr-10">
                 <h3 class="mb-5 font-semibold text-gray-400">About</h3>
 
-                <p class="text-lg text-gray-500">Our training project</p>
+                <p class="text-lg text-gray-500">Jakub and Martin</p>
             </div>
 
             <div class="w-1/3">
